@@ -94,7 +94,7 @@ void ClientConnectDaemon::netMessageLinkAck( NetMessage *message )
      lobbyView.scrollAndUpdate( "Link to Server FAILED!" );
      lobbyView.scrollAndUpdate( "Incorrect Network Protocol Revision" );
      lobbyView.scrollAndUpdate( "Please update your netPanzer executable at" );
-     lobbyView.scrollAndUpdate( "www.pyrosoftgames.com" );
+     lobbyView.scrollAndUpdate( "www.nongnu.org/netpanzer" );
      sprintf( buf, "Server Protocol Version: %d", join_request_ack_mesg->server_protocol_version);
      lobbyView.scrollAndUpdate( buf );
      connection_state = _connect_state_connect_failure;
