@@ -22,6 +22,7 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #include "Desktop.hpp"
 #include "NetworkGlobals.hpp"
 #include "NetworkState.hpp"
+#include "LobbyView.hpp"
 #include "NetworkClientUnix.hpp"
 
 // #define NETWORKDEBUG
@@ -87,6 +88,9 @@ int NetworkClientUnix::joinSession(const char* session_name)
 		clientsocket = new ClientSocket(session_name, _NETPANZER_DEFAULT_PORT_TCP);
 	} catch(Exception e) {
 		LOG( ( "Couldn't connect to server:\n%s.", e.getMessage()) );
+		char text[128];
+		snprintf(text, 128, "connection error: %s", e.getMessage());
+		lobbyView.scrollAndUpdate(text);
 		return false;
 	}
 
